--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://hugo-quickstart-template.netlify.com'
+baseURL = 'https://gleeful-marigold-a737f2.netlify.app/'
 languageCode = 'en-us'
 title = 'Netlify + Hugo Quickstart'
 theme = 'netlify-basic'
